<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homePage">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:backgroundTint="@android:color/transparent"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="2dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="39dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/icono"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/nombreApp"
                    android:textColor="@color/violet"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/profileImage"
                    android:layout_width="37dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="300dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTintMode="add"
                    android:src="@drawable/user"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView4"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/subtitulo_home"
                    android:textColor="@color/violet"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/descripcion_home"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="MissingConstraints" />

            </androidx.cardview.widget.CardView>

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/imageSlider"
                android:layout_width="371dp"
                android:layout_height="176dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="5"
                app:iss_delay="0"
                app:iss_period="1500"
                app:iss_placeholder="@android:color/darker_gray"
                app:iss_selected_dot="@drawable/default_selected_dot"
                app:iss_unselected_dot="@drawable/default_unselected_dot"
                app:layout_constraintTop_toBottomOf="@+id/cardView5"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="11dp">

            </com.denzcoskun.imageslider.ImageSlider>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView6"
                android:layout_width="396dp"
                android:layout_height="151dp"
                android:layout_marginTop="44dp"
                android:backgroundTint="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/imageSlider"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/ticket_home"
                    android:textColor="@color/violet"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="22dp"
                    tools:layout_editor_absoluteY="412dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="333dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/descTicket_home"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/buyTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="95dp"
                    android:backgroundTint="@color/violet"
                    android:drawableStart="@drawable/ticket"
                    android:text="Book Now"
                    android:textColor="@color/white"
                    tools:ignore="MissingConstraints" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:backgroundTint="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView6"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="Want to know more?"
                    android:textColor="@color/violet"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="333dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/roboto"
                    android:text="Visit us and you can learn about the latest technology and participate in the different workshops."
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/upcomingEventsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/violet"
                    android:text="Upcoming events"
                    android:textColor="@color/white"
                    android:layout_marginStart="105dp"
                    android:layout_marginTop="130dp">
                </Button>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:backgroundTint="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView10"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="29dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/ubicacion_home"
                    android:textColor="@color/violet"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/cardView6"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="37dp" />

                <ImageButton
                    android:id="@+id/imgMapa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12.5dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/mapa"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="29dp" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageButton
            android:id="@+id/calendarioBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="57dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/calendar"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="157dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/home"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/scanBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="257dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/scan"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>